<resources>
    <string name="app_name">Recumeet</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_address">Email Address</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="enter_your_password">Enter Password</string>
    <string name="log_in">LOG IN</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="create_your_password">Create Your Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full Name</string>
    <string name="create_profile">Create Profile</string>
    <string name="sign_out">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="meet">Meet</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="please_follow_someone_to_see_posts">Please Follow Someone to see posts</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="delete">Delete</string>
    <string name="visit_profile">Visit Profile</string>
    <string name="post">Post</string>
    <string name="write_a_caption">Write a Caption</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="add_comment">Add Comment</string>

    <!--    chats : add your files above @ayush and @shreyash-->
    <string name="api_key">g77jj4vv3fgh</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="date">JAN 01 2020</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="reset_password_link_will_be_sent_to_the_following_email">Reset Password link will be sent to the following email</string>
    <string name="send_reset_email">Send Reset Email</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="bio">Bio (Max 20 Chars)</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="name">Name</string>
    <string name="follow">Follow</string>
    <string name="view_post">View Posts</string>
    <string name="resume">resume</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="view_resume">View Resume</string>
    <string name="user_posts">User Posts</string>
</resources>
