<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAuth.ForgetPasswordActivity"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="22sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reset_password_link_will_be_sent_to_the_following_email"
        android:textSize="22sp"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/email_reset"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/email_address"
        android:background="@drawable/edittext_bg"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="20dp" />

    <Button
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/getEmail"
        android:background="@drawable/back_btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_reset_email"/>

</LinearLayout>