<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserAuth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="10">



        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5.1" />



    </LinearLayout>


        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo_recumeet" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/email_address"
            android:textColor="@color/darkGrey" />

        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email_address"
            android:background="@drawable/edittext_bg"
            android:hint="@string/example_gmail_com"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="20dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/password"
            android:textColor="@color/darkGrey" />

        <EditText
            android:id="@+id/pass_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/enter_your_password"
            android:background="@drawable/edittext_bg"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/forget_password"
            android:gravity="end"/>


    </LinearLayout>



        <TextView
            android:id="@+id/btn_login"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:background="@drawable/back_btn2"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="15sp"
            android:layout_marginHorizontal="15dp"
            android:clickable="true"
            android:focusable="true"/>
    <Button
        android:layout_marginTop="25dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:id="@+id/direct_reg"
        android:text="Sign Up"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/back_btn2"/>


</LinearLayout>