<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAuth.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:id="@+id/login_close"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="10dp"
                android:layout_weight="1.2"
                android:contentDescription="@string/todo"
                android:padding="15dp"
                android:src="@drawable/back_btn" />

        </LinearLayout>


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo_recumeet" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/email_address"
                android:textColor="@color/darkGrey" />

            <EditText
                android:id="@+id/email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email_address"
                android:background="@drawable/edittext_bg"
                android:hint="@string/example_gmail_com"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="20dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/create_password"
                android:textColor="@color/darkGrey" />

            <EditText
                android:id="@+id/pass_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/create_password"
                android:background="@drawable/edittext_bg"
                android:hint="@string/create_your_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/confirm_password"
                android:textColor="@color/darkGrey" />

            <EditText
                android:id="@+id/pass_reg_conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/confirm_your_password"
                android:background="@drawable/edittext_bg"
                android:hint="@string/confirm_your_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="20dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/btn_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/back_btn2"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/direct_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/back_btn2"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.ThreeBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/stream_ui_accent_red" />

</RelativeLayout>