<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Feed.FeedFragment.CommentFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_alignParentTop="true"
        android:id="@+id/comment_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/comment"/>

    <LinearLayout
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            app:cardCornerRadius="25dp">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/comment_text"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="0.6"
            android:hint="@string/add_comment" />

        <TextView
            android:id="@+id/post"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.15"
            android:gravity="center"
            android:text="@string/post"
            android:textSize="17sp" />
    </LinearLayout>
</RelativeLayout>