<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAuth.CreateUserActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/top_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/create_profile"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:gravity="center_horizontal"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/user"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="16sp"
                android:padding="5dp"
                android:textColor="@color/darkGrey"/>

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/first_name"
                android:background="@drawable/edittext_bg"
                android:hint="@string/first_name"
                android:inputType="text"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="16sp"
                android:padding="5dp"
                android:textColor="@color/darkGrey"/>

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/last_name"
                android:background="@drawable/edittext_bg"
                android:hint="@string/last_name"
                android:inputType="text"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="20dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="16sp"
                android:padding="5dp"
                android:textColor="@color/darkGrey"/>

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/username"
                android:background="@drawable/edittext_bg"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="10dp"
                android:paddingHorizontal="20dp"
                 />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="5dp"
            android:textColor="@color/darkGrey"
            android:text="@string/date_of_birth"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg">

            <Button
                android:id="@+id/datePickerButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="20sp"
                android:textColor="@color/darkGrey"
                style="?android:spinnerStyle"
                android:onClick="openDatePicker"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        
        android:background="@drawable/back_btn2"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"/>

</LinearLayout>