<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Feed.AddPostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:background="@color/white"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_close_24" />

                <TextView
                    android:id="@+id/post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:text="@string/post"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.hendraanggrian.appcompat.widget.SocialAutoCompleteTextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/bar"
        android:layout_margin="10dp"
        android:autofillHints="@string/write_a_caption"
        android:background="@drawable/disp_background"
        android:gravity="top|start"
        android:hint="@string/write_a_caption"
        android:inputType="text"
        android:maxLines="5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/post_images_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/add_post_images"
        android:layout_below="@id/description" />

    <LinearLayout
        android:id="@+id/add_post_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/add_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:text="@string/open_gallery"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_img_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_photo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:text="@string/open_camera"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>